add jenkins sample

--- a/samples/centos7php7/web/supervisord.conf
+++ b/samples/centos7php7/web/supervisord.conf
@@ -133,3 +133,6 @@ files = supervisord.d/*.ini
 
 [program:httpd]
 command=/usr/sbin/httpd -DFOREGROUND
+
+[program:jenkins]
+command=java -Djava.awt.headless=true -DJENKINS_HOME=/var/lib/jenkins -jar /usr/lib/jenkins/jenkins.war --logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war
