--- a/samples/centos7php7/docker-compose.yml
+++ b/samples/centos7php7/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 8080:8080
     volumes:
       - ./src:/var/www/html
+      - ./jenkins:/var/lib/jenkins
+      - ./log/jenkins:/var/log/jenkins
     links:
       - "db"
     networks:
