jenkins 文字コード設定

--- a/samples/centos7php7/web/supervisord.conf
+++ b/samples/centos7php7/web/supervisord.conf
@@ -135,4 +135,4 @@ files = supervisord.d/*.ini
 command=/usr/sbin/httpd -DFOREGROUND
 
 [program:jenkins]
-command=java -Djava.awt.headless=true -DJENKINS_HOME=/var/lib/jenkins -jar /usr/lib/jenkins/jenkins.war --logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war
+command=java -Djava.awt.headless=true -DJENKINS_HOME=/var/lib/jenkins -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -jar /usr/lib/jenkins/jenkins.war --logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war
